// Tool to visualize ER diagram of db
// https://dbdiagram.io/

//more info at https://github.com/notiz-dev/prisma-dbml-generator?tab=readme-ov-file

generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["postgresqlExtensions"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider   = "postgresql"
  url        = env("DATABASE_URL")
  extensions = [uuidOssp(map: "uuid-ossp", schema: "public")]
}

model ClassTeachers {
  id        String   @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  classId   String?  @db.Uuid
  teacherId String?  @db.Uuid
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  class     Class?   @relation(fields: [classId], references: [id], onDelete: Cascade, onUpdate: NoAction)
  teacher   Teacher? @relation(fields: [teacherId], references: [id], onDelete: Cascade, onUpdate: NoAction)
}

model Class {
  id            String               @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  longName      String?              @db.VarChar(255)
  shortName     String?              @db.VarChar(255)
  year          Int?
  semester      Int?
  domain        enum_Classes_domain?
  createdAt     DateTime             @default(now())
  updatedAt     DateTime             @updatedAt
  classTeachers ClassTeachers[]
  forum         Forum?
  posts         Post[]
}

model Comment {
  id        String   @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  postId    String?  @db.Uuid
  userId    String?  @db.Uuid
  message   String?  @db.VarChar(255)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  post      Post?    @relation(fields: [postId], references: [id], onDelete: Cascade, onUpdate: NoAction)
  user      User?    @relation(fields: [userId], references: [id], onDelete: NoAction, onUpdate: NoAction)
}

model Forum {
  id        String    @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  classId   String?   @unique @db.Uuid
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  class     Class?    @relation(fields: [classId], references: [id], onDelete: Cascade, onUpdate: NoAction)
  messages  Message[]
}

model Like {
  id        String   @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  postId    String?  @db.Uuid
  userId    String?  @db.Uuid
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  post      Post?    @relation(fields: [postId], references: [id], onDelete: Cascade, onUpdate: NoAction)
  user      User?    @relation(fields: [userId], references: [id], onDelete: NoAction, onUpdate: NoAction)
}

model Message {
  id        String   @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  forumId   String?  @db.Uuid
  userId    String?  @db.Uuid
  message   String?  @db.VarChar(255)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  forum     Forum?   @relation(fields: [forumId], references: [id], onDelete: Cascade, onUpdate: NoAction)
  user      User?    @relation(fields: [userId], references: [id], onDelete: NoAction, onUpdate: NoAction)
}

model Post {
  id           String             @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  classId      String?            @db.Uuid
  userId       String?            @db.Uuid
  title        String?            @db.VarChar(255)
  description  String?            @db.VarChar(255)
  resourceType enum_Resource_type
  resourceUrl  String?            @db.VarChar(255)
  classSection enum_Class_section
  createdAt    DateTime           @default(now())
  updatedAt    DateTime           @updatedAt
  comments     Comment[]
  likes        Like[]
  class        Class?             @relation(fields: [classId], references: [id], onDelete: Cascade, onUpdate: NoAction)
  user         User?              @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: NoAction)
}

model Teacher {
  id            String          @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  userId        String?         @unique @db.Uuid
  createdAt     DateTime        @default(now())
  updatedAt     DateTime        @updatedAt
  classTeachers ClassTeachers[]
  user          User?           @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: NoAction)
}

model User {
  id           String           @id @default(dbgenerated("uuid_generate_v4()")) @db.Uuid
  fullName     String?          @db.VarChar(255)
  email        String           @unique @db.VarChar(255)
  role         enum_Users_role?
  createdAt    DateTime         @default(now())
  updatedAt    DateTime         @updatedAt
  profileImage String?          @db.VarChar(255)
  comments     Comment[]
  likes        Like[]
  messages     Message[]
  posts        Post[]
  teacher      Teacher?
}

enum enum_Resource_type {
  link
  document
}

enum enum_Class_section {
  materials
  courses
  seminars
  laboratory
}

enum enum_Classes_domain {
  info
  mate
  cti
}

enum enum_Users_role {
  admin
  teacher
  student
}
